# agentic-ai-bootcamp

./: .gitignore  CONTRIBUTING.md  Deployment_Guide.md  README.md  requirements.txt
challenge/: create-zip.sh
challenge/llm-workflow-test/: README.md  main.py  pyproject.toml
challenge/llm-workflow-test/.ipynb_checkpoints/: README-checkpoint.md
challenge/llm_workflow/: README.md  __init__.py  main.py  mcp_http_client.py  pyproject.toml
challenge/mcp-server-invoice-test/: README.md  main.py  mcp_http_client.py  pyproject.toml
challenge/mcp-server-qna-test/: README.md  main.py  mcp_client.py  pyproject.toml
challenge/mcp-servers/invoice/: README.md  pyproject.toml
challenge/mcp-servers/invoice/src/mcp_server_invoice/: __init__.py  qna_agent.py  server_http.py
challenge/mcp-servers/qna/: pyproject.toml
challenge/mcp-servers/qna/src/mcp_server_qna/: __init__.py  server.py
tutorial/: start_here.ipynb
tutorial/.ipynb_checkpoints/: start_here-checkpoint.ipynb
tutorial/jupyter_notebook/: 01_inference_endpoint.ipynb  02_introduction_mcp.ipynb  03_low_level_mcp.ipynb  04_langraph_agent.ipynb  05_challenge.ipynb  mcp_client.py  mcp_server.py  mcp_server_low_level.py  mcp_server_low_level_http.py
tutorial/jupyter_notebook/.ipynb_checkpoints/: 01_inference_endpoint-checkpoint.ipynb
