[project]
name = "llm-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "tabulate>=0.9.0",
]
