[project]
name = "mcp-server-qna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tagekezo", email = "tagekezo@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.8.1",
]

[project.scripts]
mcp-server-qna = "mcp_server_qna:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
